--- a/《三天读懂互联网+》.md
+++ b/《三天读懂互联网+》.md
@@ -1,23 +1,23 @@
-##笔记（关键字，句）
-###1.思维跨越，开放自己，眼光要长远；
-###2.不要傲视
-###3.精准投放，口碑营销
-###4.运营、产品、战略、管理
-###5.主动（从内部重生），被动（死亡）
-###6.一个点入，专注、极致
-###7.《利润区》价值网络：宅配的模式会让物流成本随着客单量的提升而直线上升
-###8.移动互联网+商业模式创新，《互联网时代》纪录片
-###9.改变感受，改变行为
-###10.创新在于人才
-###11.make difference 与众不同的思维,从左脑思维到右脑思维
-###12.阿米巴，扁平化管理
-###13.皮克斯公司，皮克斯学院，建立合作伙伴关系
-###14.游戏：参与、规则、愉悦
-###15.创客：开放、分享
-###16.做有价值、有意义的事
-###17.兴趣点引导在工作上
-###18.做一个超级大的市场，找超级靠谱的人，以及永远花不完的钱
-###19.竞争战略：供应商、购买者、潜在竞争者、替代品、现有竞争者（明确行业边界）
-###20.《失控》凯文.凯利
-###21.TED
-###22."Design Thinking" ,斯坦福大学
+## 笔记（关键字，句）
+### 1.思维跨越，开放自己，眼光要长远；
+### 2.不要傲视
+### .精准投放，口碑营销
+### 4.运营、产品、战略、管理
+### 5.主动（从内部重生），被动（死亡）
+### 6.一个点入，专注、极致
+### 7.《利润区》价值网络：宅配的模式会让物流成本随着客单量的提升而直线上升
+### 8.移动互联网+商业模式创新，《互联网时代》纪录片
+### 9.改变感受，改变行为
+### 10.创新在于人才
+### 11.make difference 与众不同的思维,从左脑思维到右脑思维
+### 12.阿米巴，扁平化管理
+### 13.皮克斯公司，皮克斯学院，建立合作伙伴关系
+### 14.游戏：参与、规则、愉悦
+### 15.创客：开放、分享
+### 16.做有价值、有意义的事
+### 17.兴趣点引导在工作上
+### 18.做一个超级大的市场，找超级靠谱的人，以及永远花不完的钱
+### 19.竞争战略：供应商、购买者、潜在竞争者、替代品、现有竞争者（明确行业边界）
+### 20.《失控》凯文.凯利
+### 21.TED
+### 22."Design Thinking" ,斯坦福大学
